2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15394: Improve t3lib_SpriteManager code comments
	* Fixed bug #7901: Workaround for PHP bug with Locale tr_TR (Thanks to Reinhard Führicht)

2010-08-08  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14952: Opendocs Module relies on taskcenter_recent causing fatal error with new taskcenter (thanks to Georg Ringer and Philipp Gampe)
	* Fixed bug #15131: Linebreaks do not work anymore using '--linebreak--' in palettes (thanks to Caspar Stuebs)
	* Fixed bug #15014: Switching workspaces does not reload frames in IE6 (thanks to Andreas Kiessling)

2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15386: [Caching framework] Remove needless constant in cache manager
	* Fixed bug #14971: Unit test for sanitizeLocalUrl fails on installations inside a subdirectory (thanks to Stefan Galinski & Pascal Jungblut)

2010-08-06  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.2

2010-08-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15355: htmlArea RTE: Using the advanded frontend editing, the editor is not loaded in the text tab

2010-08-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #12646: Click on icon does not open/close sections

2010-08-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #14773: Styling issue when selecting position of new created page

2010-08-05  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15343: dbClientCompress crashes with pconnect
	* Fixed bug #15280: felogin redirect doesn't work anymore after update to latest releases (4.2x - 4.4.x) (thanks to Helmut Hummel)
	* Fixed bug #15282: It is impossible to set links to files any more with the link wizard
	* Fixed bug #15336: sys_actions shows wrong error if an "Record List" action is not propertly configured (thanks to Stefan Galinski)

2010-08-03  Susanne Moog  <typo3@susanne-moog.de>
