@@ -157,7 +157,7 @@ class tx_tstemplateanalyzer extends t3lib_extobjbase {
 				$theOutput .= $this->pObj->doc->section($GLOBALS['LANG']->getLL('constants', true), "", 0, 1);
 				$theOutput .= $this->pObj->doc->sectionEnd();
 				$theOutput .= '
-					<table border=0 cellpadding=1 cellspacing=0>
+					<table border="0" cellpadding="1" cellspacing="0">
 				';
 				$tmpl->ext_lineNumberOffset = -2;	// Don't know why -2 and not 0... :-) But works.
 				$tmpl->ext_lineNumberOffset_mode = "const";
@@ -169,9 +169,9 @@ class tx_tstemplateanalyzer extends t3lib_extobjbase {
 					if ($cVal == t3lib_div::_GET('template') || t3lib_div::_GET('template') == 'all') {
 						$theOutput .= '
 							<tr>
-								<td><img src="clear.gif" width="3" height="1" /></td><td class="bgColor2"><strong>' . htmlspecialchars($tmpl->templateTitles[$cVal]) . '</strong></td></tr>
+								<td><img src="clear.gif" width="3" height="1" alt="" /></td><td class="bgColor2"><strong>' . htmlspecialchars($tmpl->templateTitles[$cVal]) . '</strong></td></tr>
 							<tr>
-								<td><img src="clear.gif" width="3" height="1" /></td>
+								<td><img src="clear.gif" width="3" height="1" alt="" /></td>
 								<td class="bgColor2"><table border="0" cellpadding="0" cellspacing="0" class="bgColor0" width="100%"><tr><td nowrap="nowrap">' .
 								$tmpl->ext_outputTS(array($val), $this->pObj->MOD_SETTINGS['ts_analyzer_checkLinenum'], $this->pObj->MOD_SETTINGS['ts_analyzer_checkComments'], $this->pObj->MOD_SETTINGS['ts_analyzer_checkCrop'], $this->pObj->MOD_SETTINGS['ts_analyzer_checkSyntax'], $this->pObj->MOD_SETTINGS['ts_analyzer_checkSyntaxBlockmode']) .
 								'</td></tr></table>
@@ -196,7 +196,7 @@ class tx_tstemplateanalyzer extends t3lib_extobjbase {
 				$theOutput .= $this->pObj->doc->section($GLOBALS['LANG']->getLL('setup', true), "", 0, 1);
 				$theOutput .= $this->pObj->doc->sectionEnd();
 				$theOutput .= '
-					<table border=0 cellpadding=1 cellspacing=0>
+					<table border="0" cellpadding="1" cellspacing="0">
 				';
 				$tmpl->ext_lineNumberOffset = 0;
 				$tmpl->ext_lineNumberOffset_mode = "setup";
@@ -207,9 +207,9 @@ class tx_tstemplateanalyzer extends t3lib_extobjbase {
 					if (current($tmpl->clearList_setup) == t3lib_div::_GET('template') || t3lib_div::_GET('template') == 'all') {
 						$theOutput .= '
 							<tr>
-								<td><img src="clear.gif" width="3" height="1" /></td><td class="bgColor2"><strong>' . htmlspecialchars($tmpl->templateTitles[current($tmpl->clearList_setup)]) . '</strong></td></tr>
+								<td><img src="clear.gif" width="3" height="1" alt="" /></td><td class="bgColor2"><strong>' . htmlspecialchars($tmpl->templateTitles[current($tmpl->clearList_setup)]) . '</strong></td></tr>
 							<tr>
-								<td><img src="clear.gif" width="3" height="1" /></td>
+								<td><img src="clear.gif" width="3" height="1" alt="" /></td>
 								<td class="bgColor2"><table border="0" cellpadding="0" cellspacing="0" class="bgColor0" width="100%"><tr><td nowrap="nowrap">'.$tmpl->ext_outputTS(array($val),$this->pObj->MOD_SETTINGS['ts_analyzer_checkLinenum'],$this->pObj->MOD_SETTINGS['ts_analyzer_checkComments'],$this->pObj->MOD_SETTINGS['ts_analyzer_checkCrop'],$this->pObj->MOD_SETTINGS['ts_analyzer_checkSyntax'],$this->pObj->MOD_SETTINGS['ts_analyzer_checkSyntaxBlockmode']).'</td></tr></table>
 								</td>
 							</tr>
