@@ -1,5 +1,6 @@
 2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Fixed bug #15104: Validation erros in tstemplate (Thanks to Georg Ringer)
 	* Fixed bug #15394: Improve t3lib_SpriteManager code comments
 	* Fixed bug #7901: Workaround for PHP bug with Locale tr_TR (Thanks to Reinhard Führicht)
 
